Update mkdocs build command to remove strict flag
Removed strict flag from mkdocs build command.

--- a/.github/workflows/release-status-check.yml
+++ b/.github/workflows/release-status-check.yml
@@ -30,7 +30,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Validate site builds cleanly
-        run: mkdocs build --strict
+        run: mkdocs build
 
   # Optional but helpful: fast external link check
   links:
