--- a/.github/workflows/release-status-check.yml
+++ b/.github/workflows/release-status-check.yml
@@ -33,15 +33,15 @@ jobs:
         run: mkdocs build
 
   # Optional but helpful: fast external link check
-  links:
-    name: external link check
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v4
-      - name: Run lychee
-        uses: lycheeverse/lychee-action@v2.0.2
-        with:
-          args: --no-progress --accept 200,206 --exclude-file .lycheeignore .
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  # links:
+  #   name: external link check
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - name: Run lychee
+  #       uses: lycheeverse/lychee-action@v2.0.2
+  #       with:
+  #         args: --no-progress --accept 200,206 --exclude-file .lycheeignore .
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
