--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -22,7 +22,6 @@ jobs:
 
       # Install all deps from requirements.txt
       - run: pip install -r requirements.txt
-
       - run: mkdocs build
 
       - uses: actions/upload-pages-artifact@v3
@@ -36,3 +35,5 @@ jobs:
       - uses: actions/configure-pages@v5
       - id: deployment
         uses: actions/deploy-pages@v4
+      - run: pip install mkdocs-material 
+      - run: pip install mkdocs-awesome-pages-plugin
